--- a/estilos.css
+++ b/estilos.css
@@ -1,18 +1,21 @@
 *{
   margin: 0;
+  
 }
 
 body {
     font-family: 'Josefin Sans', sans-serif;
+    font-size: 24px;
     background-color: rgba(0, 0, 0, 0.185);
     
 }
 
-.header{
+#header{
     background-image: url(assets/hero.jpg);
-    position: fixed;
+    position: fixed !important;
     width: 100%;
 }
+
 nav,
 .offcanvas {
     background-color: #00000086;
@@ -30,9 +33,7 @@ nav,
     color: aliceblue;
   }
 
-  .articulo1{
-    background-color: aqua;
-  }
+ 
 
   @media (max-width: 768px) {
     .navbar-nav > li:hover {
@@ -40,3 +41,97 @@ nav,
     }
 
   }
+
+
+  #bannertop {
+    justify-content: center;
+    background: url();
+    min-height: 50vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+
+  #fondo {
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.67);
+    margin-top: 120px;
+    margin-bottom: 80px;
+    padding-left: 10px;
+    padding-top: 50px;
+    padding-bottom: 20px;
+  }
+  
+  h1{
+    color: aqua;
+  }
+/*boton baner*/
+
+  .btn-neon{
+    position: relative;
+    display: inline-block;
+    padding: 15px 30px;
+    color: #fff;
+    letter-spacing: 4px;
+    text-decoration: none;
+    font-size: 24px;
+    overflow: hidden;
+    transition: 0.2s;
+}
+.btn-neon:hover{
+    background: #45adc7;
+    box-shadow: 0 0 10px #45adc7, 0 0 40px #45adc7, 0 0 80px #a945c7;
+    transition-delay: 1s;
+ }
+.btn-neon span{
+    position: absolute;
+    display: block;
+}
+#span1{
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent,#45adc7);
+ }
+ .btn-neon:hover #span1{
+    left: 100%;
+    transition: 1s;
+}
+ #span3{
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg, transparent,#a945c7);
+}
+ .btn-neon:hover #span3{
+    right: 100%;
+    transition: 1s;
+    transition-delay: 0.5s;
+}
+#span2{
+    top: -100%;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(180deg,transparent,#a945c7);
+}
+.btn-neon:hover #span2{
+    top: 100%;
+    transition: 1s;
+    transition-delay: 0.25s;
+}
+#span4{
+    bottom: -100%;
+    left: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(360deg,transparent,#a945c7);
+}
+.btn-neon:hover #span4{
+    bottom: 100%;
+    transition: 1s;
+    transition-delay: 0.75s;
+}
