--- a/estilos.css
+++ b/estilos.css
@@ -27,17 +27,39 @@ nav {
   }
   .navbar-toggler {
     border:none;
-    color: aqua;
-    
+    position: relative;
+    left: 90%;
+    top: 4px;
+     background-color: #a945c77c;
   }
   .navbar-toggler:focus {
     outline: none;
     box-shadow: none;
+   
   }
 
   .nav-link{
     color: rgb(0, 217, 255);
 
+  }
+
+  .nav-item a{
+    position: relative;
+  }
+  .nav-item a::after{
+    content: "";
+    background-color: #a945c7;
+    position: absolute;
+    left: 0;
+    top:80%;
+    width: 100%;
+    height: 4px;
+    opacity: 0;
+  }
+
+  .nav-link:hover::after{
+    opacity: 0.8;
+    transition: all 0.6s ease 0s;
   }
 
   .navbar-brand{
@@ -55,18 +77,42 @@ nav {
     font-size: 1.7em;
     color: #45adc7;
   }
+
+
   .logo{
     width: 2.5em;
     border-radius: 50%;
   }
 
-  @media (max-width: 768px) {
-    .navbar-nav > li:hover {
-    background-color: #07c3e9a2;
-    }
+.d-lg-none a:hover{
+  color: #a945c7;
+}
 
+  @media (max-width: 992px) {
+    .nav-item a::after{
+      content: "";
+      background-color: #a945c7;
+      position: absolute;
+      left: 0;
+      top:80%;
+      width: 15%;
+      height: 4px;
+      opacity: 0;
+}
   }
 
+  @media (max-width: 768px){
+    .nav-item a::after{
+      content: "";
+      background-color: #a945c7;
+      position: absolute;
+      left: 0;
+      top:80%;
+      width: 32%;
+      height: 4px;
+      opacity: 0;
+}
+  }
 
   #bannertop {
     justify-content:center;
@@ -87,9 +133,12 @@ nav {
     padding-top: 50px;
     padding-bottom: 20px;
     color: #fff;
+    
   }
+
+
   
-  h1{
+  #bannertop h1{
     color: aqua;
   }
 /*boton baner*/
