--- a/estilos.css
+++ b/estilos.css
@@ -2,28 +2,26 @@
 
 body {
     font-family: 'Josefin Sans', sans-serif;
-    font-size: 24px;
+    font-size: 22px; 
     
-    background-image: url();
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-image: image(overflow);    
     
 }
 
 #header{
     position: fixed !important;
     width: 100%;
+    z-index: 50;
 
 }
 
 nav {
-    background-color: #000000c7;
+    background-color: #000000ea;
   }
 
   .offcanvas{
     width: 100% !important;
     background-color: #000000;
+    
   }
   .navbar-toggler {
     border:none;
@@ -116,8 +114,10 @@ nav {
 
   #bannertop {
     justify-content:center;
-    background: url();
-    min-height: 50vh;
+    background-image: 
+    linear-gradient(rgba(0, 0, 0, 0.507), rgba(0, 0, 0, 0.534)),
+    url('assets/digitization.jpg');
+    min-height: 60vh;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -127,7 +127,7 @@ nav {
   #fondo {
     text-align: center;
     background-color: rgba(0, 0, 0, 0.67);
-    margin-top: 200px;
+    margin-top: 100px;
     margin-bottom: 80px;
     padding-left: 10px;
     padding-top: 50px;
@@ -153,6 +153,7 @@ nav {
     font-size: 24px;
     overflow: hidden;
     transition: 0.2s;
+    box-shadow: 0px 0px 5px rgb(0, 225, 255);
 }
 .btn-neon:hover{
     background: #45adc7 ;
@@ -212,20 +213,73 @@ nav {
     transition-delay: 0.75s;
 }
 
-.contenedor {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+/*intro*/
+
+.intro{
+  justify-content: center;
+  text-align: center;
+  padding-top: 50px;
+  margin-bottom: 50px;
+margin-top: 25px;
 }
 
-.caja {
-  border: 1px solid black;
-  padding: 15px;
-  width: 300px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+.intro h2{
+  font-weight: 700;
+  font-size: 2em;
 }
 
+.divider{
+  justify-content: center;
+
+}
+
+.divider_internal::before{
+  content: "";
+  position: absolute;
+  width: 250px;
+  height: 4px;
+  background-color: #24a7cf;
+}
+
+
+/*seccion de articulos*/
+.articulo,
+.articulo1, 
+.articulo2{
+  align-items: center;
+  justify-content: center;
+  margin-top:60px ;
+}
+.caja{
+  text-align: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+.caja h2{
+ font-weight: 700;
+ font-size: 2em;
+}
+@media (min-width: 570px){
+  .caja{
+    max-width: 700px;
+    min-width: 500px;
+  }
+}
+
+.caja img {
+  border-radius: 25px ;
+  max-width: 80%;
+  height: auto;
+  box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.603); 
+}
+
+
+.caja #seo{
+  border-radius: 25px ;
+  max-width: 80%;
+  height: auto;
+  box-shadow: -8px 8px 15px rgba(0, 0, 0, 0.603); 
+}
 
 .animado{
   opacity: 0;
@@ -233,15 +287,48 @@ nav {
 
 }
 
-.mostrarArriba{
-  animation: mostrarArriba 1s;
+.mostrarIzquierda{
+  animation: mostrarIzquierda 1.5s;
 }
 
-@keyframes mostrarArriba {
+@keyframes mostrarIzquierda {
   0% {
-    transform: translateX(-100px);
+    transform: translateX(-150px);
   }
   100% {
     transform: translateX(0);
   }
+}
+
+
+
+.animadoD{
+  opacity: 0;
+  transition: all 1.5s;
+
+}
+
+
+.mostrarDerecha{
+  animation: mostrarDerecha 1.5s;
+}
+
+@keyframes mostrarDerecha {
+  0% {
+    transform: translateX(+150px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+
+.footer{
+  background-color: #000000de;
+  color:#45adc7;
+  text-align: center;
+  align-content: center;
+  min-height: 3em;
+  font-size: 16px;
+  padding-top: 20px;
 }
