--- a/estilos.css
+++ b/estilos.css
@@ -42,9 +42,24 @@ nav {
 
   }
 
+  .navbar #inicio{
+    color:#ffffff
+  }
+  .navbar #inicio::after{
+    content: "";
+    color: #a945c7;
+    position: absolute;
+    left: 0;
+    top:80%;
+    width: 100%;
+    height: 4px;
+    opacity: 1;
+  }
+
   .nav-item a{
     position: relative;
   }
+
   .nav-item a::after{
     content: "";
     background-color: #a945c7;
@@ -63,8 +78,7 @@ nav {
 
   .navbar-brand{
     color: rgb(0, 217, 255);
-    
-  }
+    }
 
   .navbar-brand:hover,
   .offcanvas-title:hover,
