--- a/estilos.css
+++ b/estilos.css
@@ -4,6 +4,9 @@ body {
   font-family: 'Yanone Kaffeesatz', sans-serif;
     font-size: 20px; 
     font-weight: 300;
+    background-image: url(assets/1087505.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
     
     
     
@@ -150,11 +153,13 @@ nav {
   }
 
   #bannertop {
+    padding-top: 10%;
+    padding-bottom: 10%;
     justify-content: center;
     background-image: 
-    linear-gradient(rgba(0, 0, 0, 0.507), rgba(0, 0, 0, 0.534)),
+    linear-gradient(rgba(0, 121, 143, 0.329), rgba(0, 0, 0, 0.534)),
     url('assets/digitization.jpg');
-    min-height: 60vh;
+    min-height: 100vh;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -166,11 +171,12 @@ nav {
     text-align: center;
     background-color: rgba(0, 0, 0, 0.67);
     margin-top: 100px;
-    margin-bottom: 80px;
+    
     padding-left: 10px;
     padding-top: 50px;
     padding-bottom: 20px;
     color: #fff;
+    font-size: 2em;
     
   }
 
@@ -337,7 +343,13 @@ nav {
   text-align: center;
   padding-top: 50px;
   margin-bottom: 50px;
-margin-top: 25px;
+  margin-top: 25px;
+}
+
+#intro{
+  background-color: rgba(255, 255, 255, 0.842);
+  color: #000000;
+  font-weight: 400;
 }
 
 
@@ -409,7 +421,7 @@ margin-top: 25px;
   height: 55px;
   color: #000000;
   position: fixed;
-  top: 42%;
+  top: 39%;
   left: 20px;
   transform: translateY(-50%);
   background-color: #00000000;
