--- a/estilos.css
+++ b/estilos.css
@@ -4,12 +4,8 @@ body {
   font-family: 'Yanone Kaffeesatz', sans-serif;
     font-size: 20px; 
     font-weight: 300;
-    background-image: url(assets/1087505.jpg);
     background-size: contain;
-    background-repeat: no-repeat;
-    
-    
-    
+    background-repeat: no-repeat;    
 }
 
 #header{
@@ -156,9 +152,7 @@ nav {
     padding-top: 10%;
     padding-bottom: 10%;
     justify-content: center;
-    background-image: 
-    linear-gradient(rgba(0, 121, 143, 0.329), rgba(0, 0, 0, 0.534)),
-    url('assets/digitization.jpg');
+    background-color: #000000;
     min-height: 100vh;
     background-repeat: no-repeat;
     background-position: center;
@@ -350,6 +344,9 @@ nav {
   background-color: rgba(255, 255, 255, 0.842);
   color: #000000;
   font-weight: 400;
+  border-bottom-right-radius:25px ;
+  border-top-right-radius:25px;
+  box-shadow: 0px 0px 25px rgb(0, 135, 168);
 }
 
 
@@ -401,6 +398,12 @@ margin-top: 25px;
     height: 4px;
     background-color: #24a7cf;
   }
+
+body{
+  background-image: url(/assets/1087505.jpg);
+  background-size:cover;
+  background-position: center;
+}
 }
 
 #floating-1 {
