--- a/estilos.css
+++ b/estilos.css
@@ -3,10 +3,7 @@
 body {
   font-family: 'Yanone Kaffeesatz', sans-serif;
     font-size: 20px; 
-    font-weight: 300;
-    
-    background-size: contain;
-    background-repeat: no-repeat;    
+    font-weight: 300; 
 }
 
 #header{
@@ -161,6 +158,9 @@ nav {
     box-shadow: 0px 0px 8px rgb(0, 225, 255);
   }
 
+#fondo h1{
+  font-size: 1.5em;
+}
 
 #fondo {
     text-align: center;
@@ -171,7 +171,7 @@ nav {
     padding-top: 150px;
     padding-bottom: 20px;
     color: #fff;
-    font-size: 2em;
+    font-size: 1.5em;
     box-shadow: 0px 0px 25px rgb(0, 225, 255);
     width: 600px;
     height: 600px;
@@ -438,7 +438,7 @@ body{
   height: 55px;
   color: #000000;
   position: fixed;
-  top: 39%;
+  top: 15%;
   left: 20px;
   transform: translateY(-50%);
   background-color: #00000000;
