--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
   color: #fff;
-  background-color: #000000;
+  background-color: rgb(26, 26, 26);
 }
 
 #header{
@@ -454,7 +454,9 @@ form,
 }
 
 .nosotros{
- padding-bottom: 50px;
+ background-color: #000000;
+ padding-bottom: 100px;
+ 
 }
 
 .nosotros img{
