--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
   color: #fff;
   background-color: rgb(26, 26, 26);
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: 'Nunito', sans-serif;
   
 }
 
@@ -148,13 +148,24 @@ nav {
 }
 }
 
-
 /*baner */
 
 #bannertop {
   justify-content: center;
-  background-color: #000000;
-  
+  min-height: 70vh;
+  background-image: url(assets/wave.svg);
+  background-repeat: no-repeat;
+  background-position:bottom;
+  padding-top: 5px;
+}
+
+video{
+  width: 100%;
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  top: 0;
+
 }
 
 #bannertop h1{
@@ -169,10 +180,12 @@ nav {
   line-height: 1.2em;
 }
 
-@media(max-width:600px){
+@media(max-width:700px){
   #bannertop{
-    padding-top: 20%;
-    min-height: 100vh;
+
+  }
+  #bannertop h1{
+    font-size: 2.5em;
   }
 }
 
@@ -181,8 +194,6 @@ nav {
   margin-top: 100px;
   padding-top: 80px;
   padding-bottom: 20px;
-  box-shadow: 0px 0px 25px rgb(0, 225, 255);
-  /* animation: shadowEffect 2s infinite linear; */
 }
 
 @media (max-width: 600px){
@@ -192,21 +203,6 @@ nav {
   }
 }
   
-/*
-
-@keyframes shadowEffect {
-  0% {
-    box-shadow: 0 0 15px rgba(0, 225, 225);
-  }
-  50% {
-    box-shadow: 0 0 35px rgba(0, 225, 225, 0.7);
-  }
-  100% {
-    box-shadow: 0 0 15px rgba(0, 225, 225 );
-  }
-}
-*/ 
-
 /*boton del baner*/
 
 .btn-neon {
@@ -291,7 +287,6 @@ nav {
   background-color: rgb(26, 26, 26);
   justify-content: center;
   text-align: center;
-  padding-top: 145px;
   padding-bottom: 40px;
 }
 
@@ -310,7 +305,7 @@ nav {
 /*seccion que ofrecemos*/
 
 .flayers{
-background-color: rgb(26, 26, 26);
+background-color: #1a1a1a;
 padding-bottom: 100px;
 }
 
