--- a/style.css
+++ b/style.css
@@ -4,11 +4,16 @@ body{
   font-family: 'Nunito', sans-serif;
   
 }
+video{
+  position: absolute;
+  z-index: -1;
 
+  right: 0;
+}
 #header{
   position: fixed !important;
   width: 100%;
-  z-index: 50;
+  z-index: 10;
   box-shadow: 0px 0px 8px rgb(0, 225, 255);
   font-weight: 500;
 }
@@ -157,16 +162,10 @@ nav {
   background-repeat: no-repeat;
   background-position:bottom;
   padding-top: 5px;
+  
 }
 
-video{
-  width: 100%;
-  position: absolute;
-  z-index: -1;
-  left: 0;
-  top: 0;
 
-}
 
 #bannertop h1{
   font-size: 3.8em;
@@ -181,9 +180,7 @@ video{
 }
 
 @media(max-width:700px){
-  #bannertop{
-
-  }
+ 
   #bannertop h1{
     font-size: 2.5em;
   }
@@ -404,6 +401,23 @@ padding-bottom: 100px;
       transform: translateY(0);
   }
 }
+
+.nosotros{
+ background-color: #000000;
+ padding-bottom: 100px;
+ 
+}
+
+.nosotros img{
+  min-width: px;
+}
+
+.nosotros .texto,
+.nosotros .img{
+  padding-top: 100px;
+  
+}
+
 /*seccion formulario*/
 
 #form-consulta{
@@ -426,57 +440,4 @@ form,
   min-height: 3em;
   font-size: 16px;
   padding-top: 20px;
-}
-
-.nosotros{
- background-color: #000000;
- padding-bottom: 100px;
- 
-}
-
-.nosotros img{
-  min-width: px;
-}
-
-.nosotros .texto,
-.nosotros .img{
-  padding-top: 100px;
-  
-}
-.divider{
-  background-color: rgb(26, 26, 26);
-  padding: 50px;
-  padding-left: 42%;
-  
-}
-
-.divider_internal::before{
-  content: "";
-  position: absolute;
-  margin-left:-12% ;
-  width: 40%;
-  height: 4px;
-  background-color: #24a7cf;
-}
-
-@media(max-width:1080px){
-.divider_internal::before{
-  content: "";
-  position: absolute;
-  margin-left: -13%;
-  width: 40%;
-  height: 4px;
-  background-color: #24a7cf;
-}
-}
-
-@media (max-width:768px){
-.divider_internal::before{
-  content: "";
-  position: absolute;
-  margin-left: 28%;
-  width: 40%;
-  height: 4px;
-  background-color: #24a7cf;
-  }
 }
