--- a/style.css
+++ b/style.css
@@ -1,21 +1,36 @@
 body{
   color: #fff;
-  background-color: rgb(26, 26, 26);
+  background-color: rgb(0, 0, 0);
   font-family: 'Nunito', sans-serif;
   
 }
-video{
-  position: absolute;
-  z-index: -1;
 
-  right: 0;
+.video{
+  top: 0;
+}
+
+video{
+  z-index: -4;
+  position: absolute;
+  width: 100%;
+  left: 0;
+}
+
+
+@media(max-width:768px){
+  video{
+    top: 200px;
+    width: 100%;
+    left: 0;
+   
+  }
 }
 #header{
   position: fixed !important;
   width: 100%;
   z-index: 10;
   box-shadow: 0px 0px 8px rgb(0, 225, 255);
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .logo{
@@ -304,6 +319,7 @@ nav {
 .flayers{
 background-color: #1a1a1a;
 padding-bottom: 100px;
+justify-content: center;
 }
 
 /*seccion de flayer*/
@@ -314,6 +330,7 @@ padding-bottom: 100px;
   transition: all 1.5s;
   padding-top: 20px;
   padding-left: 25px;
+  
 }
 
 .articulo img,
