--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+  margin: 0;
   color: #fff;
   background-color: rgb(0, 0, 0);
   font-family: 'Nunito', sans-serif;
@@ -11,16 +12,16 @@ body{
 
 video{
   z-index: -4;
-  position: absolute;
-  width: 100%;
-  left: 0;
+  position: fixed;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 
 @media(max-width:768px){
   video{
-    top: 200px;
-    width: 100%;
+    top: 20px;
+    height: 100%;
     left: 0;
    
   }
