--- a/style.css
+++ b/style.css
@@ -3,8 +3,10 @@ body{
   color: #fff;
   background-color: rgb(0, 0, 0);
   font-family: 'Nunito', sans-serif;
-  
+    
 }
+
+
 
 .video{
   top: 0;
@@ -436,16 +438,53 @@ justify-content: center;
   
 }
 
+.nosotros h4{
+  color: #45adc7;
+}
 /*seccion formulario*/
 
 #form-consulta{
-  padding: 25px;
+  padding: 50px;
+  background-color: #1a1a1a;
+  
+  
 }
 
-form,
-.img-form
-{
-  padding-top: 20px;
+#form-consulta h3{
+  font-size: 2.5em;
+  font-weight: 700 !important;
+}
+
+#form-consulta h5{
+ color: #45adc7;
+}
+
+.img-form {
+   width: 400px;
+   padding-top: 70px;
+   margin-left: 70px;
+}
+
+form{
+  
+}
+
+input{
+  color: #fff;
+  background-color: #FBFBFB24;
+  border-radius: 7px;
+  height: 60px;
+  width: 93%;
+  margin-bottom: 10px;
+  padding-left: 10px;
+}
+
+
+textarea{
+  width: 93%;
+  height: 150px;
+  background-color: #FBFBFB24;
+  border-radius: 7px;
 }
 
 /*footer*/
