--- a/style.css
+++ b/style.css
@@ -444,7 +444,8 @@ justify-content: center;
 /*seccion formulario*/
 
 #form-consulta{
-  padding: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   background-color: #1a1a1a;
   
   
@@ -465,6 +466,20 @@ justify-content: center;
    
 }
 
+@media (max-width:600px){
+  .img-form {
+    width: 400px;
+    padding-top: 40px;
+    margin-left: 30px;
+ }
+
+ input,
+ textarea{
+  width: 20px;
+ }
+
+}
+
 form{
   
 }
@@ -474,14 +489,19 @@ input{
   background-color: #FBFBFB24;
   border-radius: 7px;
   height: 60px;
-  width: 93%;
+  width: 100%;
   margin-bottom: 10px;
   padding-left: 10px;
+  
 }
 
+input:hover{
+  border-color:#45adc7;
+}
 
 textarea{
-  width: 93%;
+  color: #fff;
+  width: 100%;
   height: 150px;
   background-color: #FBFBFB24;
   border-radius: 7px;
