--- a/style.css
+++ b/style.css
@@ -424,20 +424,12 @@ justify-content: center;
 
 .nosotros{
  background-color: #000000;
- padding-bottom: 100px;
- padding-top: 100px;
- 
 }
 
 .nosotros img{
-  min-width: px;
+  padding-top: 50px;
 }
 
-.nosotros .texto,
-.nosotros .img{
-  padding-top: 100px;
-  
-}
 
 .nosotros h4{
   color: #45adc7;
@@ -471,12 +463,16 @@ justify-content: center;
   .img-form {
     width: 400px;
     padding-top: 40px;
-    margin-left: 30px;
+    margin-left: 35px;
  }
 
  input,
- textarea{
-  width: 20px;
+ textarea,
+ label,
+#form-consulta button{
+  width: 100%;
+  margin-left: 10px;
+
  }
 
 }
