seccion trabajos carrusel

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ video{
   position: fixed !important;
   width: 100%;
   z-index: 10;
-  box-shadow: 0px 0px 8px rgb(0, 225, 255);
+  box-shadow: 0px 0px 50px rgb(0, 60, 68);
   font-weight: 400;
 }
 
@@ -175,8 +175,10 @@ nav {
 
 #bannertop {
   justify-content: center;
-  min-height: 70vh;
-  background-image: url(assets/wave.svg);
+  min-height: 75vh;
+  background-image: 
+  url(assets/wave.svg);
+ 
   background-repeat: no-repeat;
   background-position:bottom;
   padding-top: 5px;
@@ -303,6 +305,7 @@ nav {
   justify-content: center;
   text-align: center;
   padding-bottom: 40px;
+  padding-top: 50px;
 }
 
 
@@ -321,7 +324,7 @@ nav {
 
 .flayers{
 background-color: #1a1a1a;
-padding-bottom: 100px;
+padding-bottom: 50px;
 justify-content: center;
 }
 
@@ -333,6 +336,7 @@ justify-content: center;
   transition: all 1.5s;
   padding-top: 20px;
   padding-left: 25px;
+  margin-bottom: 15px;
   
 }
 
@@ -441,6 +445,19 @@ justify-content: center;
     padding-right: 0px;
   }
 }
+
+.trabajos{
+  justify-content: center;
+  padding: 50px 0 100px 0;
+}
+
+
+
+#trabajos img{
+  box-shadow: 2px 4px 200px 200px rgba(23, 44, 48, 0.726);
+}
+
+
 /*seccion formulario*/
 
 #form-consulta{
@@ -470,7 +487,7 @@ justify-content: center;
   .img-form {
     width: 400px;
     padding-top: 40px;
-    margin-left: 35px;
+    margin-left: 20px;
  }
 
  input,
@@ -518,6 +535,7 @@ form button{
   height: 60px;
   margin-top: 10px;
 }
+
 /*footer*/
 
 .footer{
