--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
-body{
+*{
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+body{
   color: #fff;
   background-color: rgb(0, 0, 0);
   font-family: 'Nunito', sans-serif;
     
 }
-
-
 
 .video{
   top: 0;
