--- a/style.css
+++ b/style.css
@@ -479,7 +479,7 @@ justify-content: center;
   box-shadow: 2px 4px 200px 200px rgba(23, 44, 48, 0.726);
 }
 
-.trabajos h5{
+h5{
   color: #45adc7;
 }
 
