--- a/style.css
+++ b/style.css
@@ -7,42 +7,20 @@
 
 body{
   color: #fff;
-  background-color: rgb(0, 0, 0);
   font-family: 'Nunito', sans-serif;
     
 }
 
-.video{
-  top: 0;
-}
-
-video{
-  z-index: -4;
-  position: fixed;
-  min-width: 100%;
-  min-height: 100%;
-}
-
-
-@media(max-width:768px){
-  video{
-    top: 20px;
-    height: 100%;
-    left: 0;
-   
-  }
-  
-}
 #header{
   position: fixed !important;
   width: 100%;
   z-index: 10;
-  box-shadow: 0px 0px 50px rgb(0, 60, 68);
+  box-shadow: 0px 0px 5px rgb(0, 225, 255);
   font-weight: 400;
 }
 
 .logo{
-  width: 8em;
+  width: 5em;
 }
 
 
@@ -50,25 +28,9 @@ video{
 /*barra de navegacion lg*/
 
 nav {
-  background-color: #000000ea;
+  background-color: #000000c7;
  
 }
-
-.navbar #inicio{
-  color:#45adc7
-}
-
-.navbar #inicio::after{
-  content: "";
-  color:#45adc7;
-  position: absolute;
-  left: 0;
-  top:80%;
-  width: 100%;
-  height: 4px;
-  opacity: 1;
-}
-
 
 .nav-link{
   color: rgb(255, 255, 255);
@@ -90,7 +52,7 @@ nav {
   left: 0;
   top:80%;
   width: 100%;
-  height: 4px;
+  height: 2px;
   opacity: 0;
 }
 
@@ -115,7 +77,7 @@ nav {
 }
 
 .offcanvas-title{
-  font-size: 1.7em;
+  font-size: 1.5em;
   color:#fff;
 }
 
@@ -137,19 +99,8 @@ nav {
     left: 0;
     top:80%;
     width: 15%;
-    height: 4px;
+    height: 2px;
     opacity: 0;
-}
-
-  .navbar #inicio::after{
-    content: "";
-    color:#45adc7;
-    position: absolute;
-    left: 0;
-    top:80%;
-    width: 32%;
-    height: 4px;
-    opacity: 1;
 }
 
 }
@@ -162,19 +113,10 @@ nav {
     left: 0;
     top:80%;
     width: 32%;
-    height: 4px;
+    height: 2px;
     opacity: 0;
 }
-  .navbar #inicio::after{
-    content: "";
-    color: #ffffff;
-    position: absolute;
-    left: 0;
-    top:80%;
-    width: 32%;
-    height: 4px;
-    opacity: 1;
-}
+
 
 .navbar-brand{
   padding-left: 0px;
@@ -221,29 +163,30 @@ nav {
 #fondo {
   text-align: center;
   margin-top: 100px;
+  margin-bottom: 180px;
   padding-top: 80px;
-  padding-bottom: 20px;
+
+  
 }
 
 @media (max-width: 600px){
   #fondo{
       height: 500px;
-      padding-top:80px ;
+      padding-top:30px ;
   }
 }
   
 /*boton del baner*/
 
 .btn-neon {
-  margin-top: 50px;
-  margin: 50px;
+  margin: 25px 50px 25px 50px;
   position: relative;
   display: inline-block;
-  padding: 15px 30px;
+  padding: 10px 30px;
   color: #fff;
-  letter-spacing: 2px;
   text-decoration: none;
-  font-size: 24px;
+  font-size: 20px;
+  font-weight: 600;
   overflow: hidden;
   transition: 0.2s;
   box-shadow: 0px 0px 5px rgb(0, 225, 255);
@@ -463,6 +406,7 @@ justify-content: center;
 
 .nosotros{
  background-color: #000000;
+
  padding-right: 30px;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.781);
 }
@@ -489,6 +433,12 @@ justify-content: center;
 .trabajos{
   padding: 50px 0 100px 0;
   background-color: #1a1a1a;
+  background-image: 
+  linear-gradient(rgb(34, 34, 34), rgba(54, 54, 54, 0.932)),
+  url(assets/celu-tablet-pc.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   box-shadow: 0px 0px 10px  rgba(0, 0, 0, 0.781);
 }
 
