--- a/style.css
+++ b/style.css
@@ -11,12 +11,31 @@ body{
     
 }
 
+body::-webkit-scrollbar{
+  width: 10px;
+  background: #383838;
+}
+
+body::-webkit-scrollbar-thumb{
+  background: #45adc7;
+  border-radius: 5px;
+}
+
 #header{
   position: fixed !important;
   width: 100%;
   z-index: 10;
-  box-shadow: 0px 0px 5px rgb(0, 225, 255);
   font-weight: 400;
+  transition: 0.5s linear 0.1s;
+}
+
+#header.solid{
+  background-color: #3f3f3f;
+  box-shadow: 0px 0px 5px rgb(0, 225, 255);
+}
+
+#header.off{
+  transform: translateY(-200px)
 }
 
 .logo{
@@ -28,7 +47,7 @@ body{
 /*barra de navegacion lg*/
 
 nav {
-  background-color: #000000c7;
+  
  
 }
 
