delete 12 y color y width al hr

--- a/style.css
+++ b/style.css
@@ -466,6 +466,11 @@ justify-content: center;
   box-shadow: 2px 4px 200px 200px rgba(23, 44, 48, 0.726);
 }
 
+.trabajos hr{
+  width: 60%;
+  color: #45adc7;
+}
+
 h5{
   color: #45adc7;
 }
@@ -474,6 +479,10 @@ h5{
  h3{
   font-size: 2.5em;
   font-weight: 700 !important;
+}
+
+.trabajos h4{
+  color: #45adc7;
 }
 
 
