--- a/style.css
+++ b/style.css
@@ -1,55 +1,51 @@
 *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-
-body{
-  color: #fff;
-  font-family: 'Nunito', sans-serif;
-    
-}
-
-body::-webkit-scrollbar{
-  width: 10px;
-  background: #383838;
-}
-
-body::-webkit-scrollbar-thumb{
-  background: #45adc7;
-  border-radius: 5px;
-}
-
-#header{
-  position: fixed !important;
-  width: 100%;
-  z-index: 10;
-  font-weight: 400;
-  transition: 0.5s linear 0.1s;
-}
-
-#header.solid{
-  background-color: #3f3f3f;
-  box-shadow: 0px 0px 5px rgb(0, 225, 255);
-}
-
-#header.off{
-  transform: translateY(-200px)
-}
-
-.logo{
-  width: 5em;
-}
-
-
-
-/*barra de navegacion lg*/
-
-nav {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
   
- 
-}
+  
+  body{
+    color: #fff;
+    font-family: 'Nunito', sans-serif;
+      
+  }
+  
+  body::-webkit-scrollbar{
+    width: 10px;
+    background: #383838;
+  }
+  
+  body::-webkit-scrollbar-thumb{
+    background: #45adc7;
+    border-radius: 5px;
+  }
+  
+
+  #header{
+    position: fixed !important;
+    width: 100%;
+    z-index: 10;
+    font-weight: 400;
+    transition: 0.5s linear 0.1s;
+  }
+  
+
+  #header.solid{
+    background-color: #3f3f3f;
+    box-shadow: 0px 0px 5px rgb(0, 225, 255);
+  }
+  
+  #header.off{
+    transform: translateY(-200px)
+  }
+  
+  .logo{
+    width: 5em;
+  }
+  
+
+  /*barra de navegacion lg*/
 
 .nav-link{
   color: rgb(255, 255, 255);
@@ -145,169 +141,160 @@ nav {
 /*baner */
 
 #bannertop {
-  justify-content: center;
-  padding-top: 15vh;
-  background-image: 
-  linear-gradient(rgba(0, 0, 0, 0.562), rgba(0, 0, 0, 0.404)),
-  url(assets/block.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 100vh;
-  color: #fff;
-
+    justify-content: center;
+    padding-top: 15vh;
+    background-image: 
+    linear-gradient(rgba(0, 0, 0, 0.562), rgba(0, 0, 0, 0.404)),
+    url(assets/block.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    color: #fff;
   
-}
-
-
-
-#bannertop h1{
-  font-size: 3.8em;
-  font-weight: 600;
-  line-height: 1.2em;
-}
-
-#bannertop h3{
-  font-weight: 300;
-  font-size: 24px;
-  line-height: 1.2em;
-}
-
-@media(max-width:700px){
- 
+    
+  }
+  
+  
+  
   #bannertop h1{
-    font-size: 2.5em;
+    font-size: 3.8em;
+    font-weight: 600;
+    line-height: 1.2em;
   }
-}
-
-#fondo {
-  text-align: center;
-  margin-top: 100px;
-  margin-bottom: 180px;
-  padding-top: 80px;
-
   
-}
-
-@media (max-width: 600px){
-  #fondo{
-      height: 500px;
-      padding-top:30px ;
+  #bannertop h3{
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 1.2em;
   }
-}
   
-/*boton del baner*/
+  @media(max-width:700px){
+   
+    #bannertop h1{
+      font-size: 2.5em;
+    }
+  }
+  
+  #fondo {
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 180px;
+    padding-top: 80px;
+  
+    
+  }
+  
+    
+  /*boton del baner*/
+  
+  .btn-neon {
+    margin: 25px 50px 25px 50px;
+    position: relative;
+    display: inline-block;
+    padding: 10px 30px;
+    color: #fff;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 600;
+    overflow: hidden;
+    transition: 0.2s;
+    box-shadow: 0px 0px 5px rgb(0, 225, 255);
+  }
+  
+  .btn-neon:hover{
+    background: #45adc7 ;
+    box-shadow: 0 0 10px #45adc7, 0 0 40px #45adc7, 0 0 80px #bbbbbb !important;
+    transition-delay: 1s;
+    color: #000000;
+  }
+  
+  .btn-neon span{
+    position: absolute;
+    display: block;
+  }
+  
+  #span1{
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent,#bbbbbb);
+  }
+  
+  .btn-neon:hover #span1{
+    left: 100%;
+    transition: 1s;
+  }
+  
+  #span3{
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg, transparent,#bbbbbb);
+  }
+  .btn-neon:hover #span3{
+    right: 100%;
+    transition: 1s;
+    transition-delay: 0.5s;
+  }
+  #span2{
+    top: -100%;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(180deg,transparent,#bbbbbb);
+  }
+  .btn-neon:hover #span2{
+    top: 100%;
+    transition: 1s;
+    transition-delay: 0.25s;
+  }
+  #span4{
+    bottom: -100%;
+    left: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(360deg,transparent,#bbbbbb);
+  }
+  .btn-neon:hover #span4{
+    bottom: 100%;
+    transition: 1s;
+    transition-delay: 0.75s;
+  }
+  
 
-.btn-neon {
-  margin: 25px 50px 25px 50px;
-  position: relative;
-  display: inline-block;
-  padding: 10px 30px;
-  color: #fff;
-  text-decoration: none;
-  font-size: 20px;
-  font-weight: 600;
-  overflow: hidden;
-  transition: 0.2s;
-  box-shadow: 0px 0px 5px rgb(0, 225, 255);
-}
+  /*intro*/ 
 
-.btn-neon:hover{
-  background: #45adc7 ;
-  box-shadow: 0 0 10px #45adc7, 0 0 40px #45adc7, 0 0 80px #bbbbbb !important;
-  transition-delay: 1s;
-  color: #000000;
-}
-
-.btn-neon span{
-  position: absolute;
-  display: block;
-}
-
-#span1{
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 2px;
-  background: linear-gradient(90deg, transparent,#bbbbbb);
-}
-
-.btn-neon:hover #span1{
-  left: 100%;
-  transition: 1s;
-}
-
-#span3{
-  bottom: 0;
-  right: -100%;
-  width: 100%;
-  height: 2px;
-  background: linear-gradient(270deg, transparent,#bbbbbb);
-}
-.btn-neon:hover #span3{
-  right: 100%;
-  transition: 1s;
-  transition-delay: 0.5s;
-}
-#span2{
-  top: -100%;
-  right: 0;
-  width: 2px;
-  height: 100%;
-  background: linear-gradient(180deg,transparent,#bbbbbb);
-}
-.btn-neon:hover #span2{
-  top: 100%;
-  transition: 1s;
-  transition-delay: 0.25s;
-}
-#span4{
-  bottom: -100%;
-  left: 0;
-  width: 2px;
-  height: 100%;
-  background: linear-gradient(360deg,transparent,#bbbbbb);
-}
-.btn-neon:hover #span4{
-  bottom: 100%;
-  transition: 1s;
-  transition-delay: 0.75s;
-}
-
-/*texto intri*/
-
-.intro{
-  background-color: rgb(26, 26, 26);
-  justify-content: center;
-  text-align: center;
+ .intro{
+  background-color: #1a1a1a;
   padding-bottom: 40px;
   padding-top: 100px;
-}
+  text-align: center;
+  
+ }
 
+ .center-inicio{
+    justify-content: center;
+ }
 
+ /*flayers*/
 
-#intro{
-  background-image: 
-  linear-gradient(rgba(0, 30, 37, 0.918), rgba(22, 28, 31, 0.795)),
-  url();
-  border-radius:25px ;
-  border-top-left-radius:0;
-  border-top-right-radius: 0;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.781);
-  padding-top: 16px;
-}
+ .flayers{
+    background-color: rgb(26, 26, 26);
+    padding-bottom: 50px; 
+ }
 
+ .center-flay{
+    justify-content: center;
+ }
 
+ /*seccion de flayer*/
 
-/*seccion que ofrecemos*/
+ .flayers h5{
+    color: #fff;
+ }
 
-.flayers{
-background-color: #1a1a1a;
-padding-bottom: 50px;
-justify-content: center;
-
-}
-
-/*seccion de flayer*/
 .articulo,
 .articulo1,
 .articulo2{
@@ -334,7 +321,7 @@ justify-content: center;
 
 .articulo {
   background-image: 
-  linear-gradient(rgba(0, 30, 37, 0.959), rgba(0, 61, 94, 0.973)),url(assets/png/diseñamos-2.png);
+  linear-gradient(rgba(0, 30, 37, 0.959), rgba(0, 61, 94, 0.973)),url(assets/diseñamos-2.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -342,7 +329,7 @@ justify-content: center;
 
 .articulo1{
   background-image: 
-  linear-gradient(rgba(0, 30, 37, 0.959), rgba(0, 61, 94, 0.973)),url(assets/png/responsive-2.png);
+  linear-gradient(rgba(0, 30, 37, 0.959), rgba(0, 61, 94, 0.973)),url(assets/responsive-2.png);
 
   background-size: cover;
   background-repeat: no-repeat;
@@ -351,7 +338,7 @@ justify-content: center;
  
 .articulo2{
   background-image: 
-  linear-gradient(rgba(0, 30, 37, 0.959), rgba(0, 61, 94, 0.973)), url(assets/png/seo-1.png);
+  linear-gradient(rgba(0, 30, 37, 0.959), rgba(0, 61, 94, 0.973)), url(assets/seo-1.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -423,194 +410,151 @@ justify-content: center;
   }
 }
 
-.nosotros{
- background-color: #000000;
 
- padding-right: 30px;
- box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.781);
+/*about*/
+
+.nos{
+    background-color: #000000;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.781);
 }
 
-.nosotros img{
-  padding-top: 50px;
-}
+/*works*/
 
-
-.nosotros h4{
-  color: #45adc7;
-}
-
-@media (max-width:600px){
-  .nosotros{
-    padding-right: 0px;
-  }
-}
-
-
-/*seccion de trabajos*/
-
-
-.trabajos{
-  padding: 50px 0 100px 0;
-  background-color: #1a1a1a;
-  background-image: 
+.work{
+    background-color: #1a1a1a;
+    padding: 50px 0 100px 0;
+    background-image: 
   linear-gradient(rgb(34, 34, 34), rgba(54, 54, 54, 0.932)),
   url(assets/celu-tablet-pc.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   box-shadow: 0px 0px 10px  rgba(0, 0, 0, 0.781);
-}
 
+}
 
 .trabajos img{
-  box-shadow: 2px 4px 200px 200px rgba(23, 44, 48, 0.726);
-}
-
-.trabajos hr{
-  width: 60%;
-  color: #45adc7;
-}
-
-h5{
-  color: #45adc7;
-}
-
-
- h3{
-  font-size: 2.5em;
-  font-weight: 700 !important;
-}
-
-.trabajos h4{
-  color: #45adc7;
-}
-
-
-
-
-/*hablemos*/
-
-#hablemos{
-  background-color: #1a1a1a;
-}
-
-
-
-
-/*seccion formulario*/
-
-#form-consulta{
+    box-shadow: 2px 4px 200px 200px rgba(23, 44, 48, 0.726);
+  }
   
-  background-color: #1a1a1a;
+  .trabajos hr{
+    width: 60%;
+    color: #45adc7;
+  }
   
-  
+/*hablemos*/ 
+
+.hablemos{
+    background-color: #1a1a1a;
 }
 
-#linktree{
-  padding-top: 46px;
+/*formulario*/
+
+.formu{
+    background-color: #1a1a1a;
 }
-
-
-.linkt{
-  width: 100%;
-  height: 60px;
-  font-size: 20px;
-  background-color: #FBFBFB24;
-  border-radius: 7px;
-  border: none;
-  color: rgb(255, 255, 255);
-  cursor: pointer;
-  margin-bottom: 34px;
-  box-shadow: 0px 0px 8px rgb(0, 0, 0);
-}
-
-.linkt:hover{
-  background-color: #45adc7;
-  transform: scale(1.01);
-  transition-duration: 0.5s;
-  color:rgba(0, 0, 0, 0.63);
-  font-size: 20px;
-  
-}
-
 
 input{
-  color: #fff;
-  background-color: #FBFBFB24;
-  border-radius: 7px;
-  height: 60px;
-  width: 100%;
-  margin-bottom: 10px;
-  padding-left: 10px;
-  outline: none;
-  border: none;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.781);
-}
-
-
+    color: #fff;
+    background-color: #FBFBFB24;
+    border-radius: 7px;
+    height: 60px;
+    width: 100%;
+    margin-bottom: 10px;
+    padding-left: 10px;
+    outline: none;
+    border: none;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.781);
+  }
+  
+  
 textarea{
-  color: #fff;
-  width: 100%;
-  height: 150px;
-  background-color: #FBFBFB24;
-  border-radius: 7px;
-  outline: none;
-  border: none;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.781);
-}
-
-form button{
-  background-color: #45adc7;
-  border: none;
-  border-radius: 7px;
-  width: 150px;
-  height: 60px;
-  margin-top: 10px;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.781);
-  color:#fff
-}
-
-form button:hover{
-  transform: scale(1.01);
-  transition-duration: 0.2s;
-  color:#000000;
+    color: #fff;
+    width: 100%;
+    height: 150px;
+    background-color: #FBFBFB24;
+    border-radius: 7px;
+    outline: none;
+    border: none;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.781);
+  }
   
-}
+  form button{
+    background-color: #45adc7;
+    border: none;
+    border-radius: 7px;
+    width: 150px;
+    height: 60px;
+    margin-top: 10px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.781);
+    color:#fff
+  }
+  
+  form button:hover{
+    transform: scale(1.01);
+    transition-duration: 0.2s;
+    color:#000000;
+    
+  }
+  
+  #formulario-consulta{
+    padding-top: 22px;
+    padding-bottom: 22px;
+  }
+  
+  #linktree{
+    padding-top: 46px;
+  }
+  
+  
+  .linkt{
+    width: 100%;
+    height: 60px;
+    font-size: 20px;
+    background-color: #FBFBFB24;
+    border-radius: 7px;
+    border: none;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+    margin-bottom: 34px;
+    box-shadow: 0px 0px 8px rgb(0, 0, 0);
+  }
+  
+  .linkt:hover{
+    background-color: #45adc7;
+    transform: scale(1.01);
+    transition-duration: 0.5s;
+    color:rgba(0, 0, 0, 0.63);
+    font-size: 20px;
+    
+  }
+  
+  /*footer*/
 
+  .foot{
+    background-color: #000000;
+  }
 
-#formulario-consulta{
-  padding-top: 22px;
-  padding-bottom: 22px;
-}
-
-
-@media (max-width:850px){
-
- h3{
-  font-size: 1.8em;
+  footer img{
+    width: 10em;
+  }
+  
+  .copyright{
+  
+    text-align: center;
+    align-content: center;
+  }
+  
+  h3{
+    font-size: 2.5em;
   font-weight: 700 !important;
- }
+  }
 
- .navbar-brand{
-  padding-left: 0px;
-}
- }
+  h4, h5{
+    color: #45adc7;
+  }
 
-/*footer*/
-
-footer{
-  background-color: #000000;
-  color:#ffffff;
-  font-size: 16px;
-
-}
-
-footer img{
-  width: 10em;
-}
-
-.copyright{
-  
-  text-align: center;
-  align-content: center;
+hr{
+    width: 60%;
+    color: #45adc7;
 }
