--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ input[type=number]::-webkit-outer-spin-button {
   body{
     color: #fff;
     font-family: 'Nunito', sans-serif;
-      
+    background-color: #000000;
   }
   
   body::-webkit-scrollbar{
@@ -592,4 +592,42 @@ hr{
   h3{
     font-size: 2.1em;
   }
+}
+
+/*cursor*/
+
+.cursor{
+  position: fixed;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #45adc7;
+  border-radius: 50%;
+  left: 0;
+  top: 0;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+  transition: .05s;
+}
+
+.cursor2{
+  position: fixed;
+  width: 6px;
+  height: 6px;
+  background-color: #45adc7;
+  border-radius: 50%;
+  left: 0;
+  top: 0;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+  transition: 0s;
+}
+
+.content:hover ~ .cursor{
+  transform: translate(-50%, -50%) scale(1.5);
+  background-color: #c6c6c6;
+  opacity: .5;
+}
+
+.content:hover ~ .cursor2{
+  opacity: 0;
 }
